# ov_gpu_custom_ops

./: custom_layer.xml  exec.xml  exec_custom_op.xml  infer_custom_layer.py  mask_custom_layer.xml  mask_infer_custom_layer.py  mask_sdpa_ov.cl
cpu_custom_op/: ov_extension.cpp
cpu_custom_op/simplegpu/: simplegpu.cpp  simplegpu.hpp
cpu_custom_op_mask/: CMakeLists.txt
cpu_custom_op_mask/simplegpu/: simplegpu.cpp  simplegpu.hpp
custom_op_model/: static_detr_sdpa.xml
mask_custom_op_model/: static_detr_sdpa.xml
origin/: static_detr_sdpa.xml
signal_sdpa_attr/1_8_100_256_32/: create_custom_model.py  custom_sdpa.xml  infer_custom_layer.py  mask_sdpa_ov.cl
signal_sdpa_attr/1_8_100_256_32/origin/: custom_sdpa.xml
signal_sdpa_attr/1_8_100_32/: create_custom_model.py  custom_layer.xml  custom_sdpa.xml  infer_custom_layer.py  sdpa_ov.cl
signal_sdpa_attr/1_8_100_32/origin/: custom_sdpa.xml  test_sdpa.xml
signal_sdpa_attr/1_8_256_32/: create_custom_model.py  custom_sdpa.xml  infer_custom_layer.py
signal_sdpa_attr/1_8_256_32/origin/: custom_sdpa.xml
two_sdpa/: create_custom_model.py  custom_layer.xml  custom_sdpa.xml  exec.xml  infer_custom_layer.py  sdpa_ov.cl
